[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lyrewave"
version = "0.0"
authors = [
  { name="Timo Wendner", email="timo.wendner@gmail.com" },
]
description = "Torch project to generate audio, based on training examples"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'torch',
    'torchaudio',
    'numpy',
    'tqdm',
    'toml'
]

[project.urls]
Homepage = "https://github.com/timowendner/lyrewave"